Added settings and exercise generator.

--- a/Dactylography/Dactylography/Dactylography.csproj
+++ b/Dactylography/Dactylography/Dactylography.csproj
@@ -50,6 +50,18 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormCreateExc.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormCreateExc.Designer.cs">
+      <DependentUpon>FormCreateExc.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormSettings.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormSettings.Designer.cs">
+      <DependentUpon>FormSettings.cs</DependentUpon>
+    </Compile>
     <Compile Include="Key.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -72,6 +84,12 @@
     </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormCreateExc.resx">
+      <DependentUpon>FormCreateExc.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormSettings.resx">
+      <DependentUpon>FormSettings.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
