Fixed a minor bug, added settings
Added saving settings between execution sessions. Fixed a bug where
refreshing the form when an exercise wasn't running would throw an
unhandled null-pointer exception.

Started the statistics class, loading and saving.

--- a/Dactylography/Dactylography/Dactylography.csproj
+++ b/Dactylography/Dactylography/Dactylography.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Keyboard.Designer.cs">
       <DependentUpon>Keyboard.cs</DependentUpon>
     </Compile>
+    <Compile Include="Statistics.cs" />
     <Compile Include="Text.cs">
       <SubType>Component</SubType>
     </Compile>
