--- a/Dactylography/Dactylography/App.config
+++ b/Dactylography/Dactylography/App.config
@@ -1,6 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Dactylography.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+    <userSettings>
+        <Dactylography.Properties.Settings>
+            <setting name="previewKey" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="previewFinger" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="wait" serializeAs="String">
+                <value>True</value>
+            </setting>
+        </Dactylography.Properties.Settings>
+    </userSettings>
 </configuration>
