--- a/Dactylography/Dactylography/Dactylography.csproj
+++ b/Dactylography/Dactylography/Dactylography.csproj
@@ -34,6 +34,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -129,6 +130,9 @@
     <Folder Include="Resources\Exercises\Easy\" />
     <Folder Include="Resources\Exercises\Hard\" />
     <Folder Include="Resources\Exercises\Moderate\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
