Added preferences, timer
Added easy, moderate and hard exercises in json form to preferences.
Also added a timer, with a timer, label, and int that keeps track.

--- a/Dactylography/Dactylography/App.config
+++ b/Dactylography/Dactylography/App.config
@@ -19,6 +19,15 @@
             <setting name="wait" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="Easy" serializeAs="String">
+                <value>{"text":"FFF JJFJ JJF JFFJ FFFJ","highScore":{"length":0,"correct":0,"wrong":-1,"wpm":0},"lastScore":{"length":0,"correct":0,"wrong":-1,"wpm":0}}</value>
+            </setting>
+            <setting name="Moderate" serializeAs="String">
+                <value>{"text":"SFČLČFKČAD FASLJČK SJSSJSJD LLALLLK AČČFFJA AJKLFDSAAK ČSDKDSS DSJJDJ JALSLČA JJLJAJ ALSFKSKD SSFLKFČF","highScore":{"length":0,"correct":0,"wrong":-1,"wpm":0},"lastScore":{"length":0,"correct":0,"wrong":-1,"wpm":0}}</value>
+            </setting>
+            <setting name="Hard" serializeAs="String">
+                <value>{"text":"EJWGXWC ĆMSŠGAJE ETMPOQ VĐĐPOPTGTF WTFHČŠALACVJNG BUFLCXSHL KĐBIĆNRŽ ĐNAGSS KQKMXSXNĐ ŽSTFJJOTDMQOTVL YQĐBČS ĐWPBLŽQ NCXĐKTDCUJUŽ ZUCYUKČČĐG NIĆBRLL BOWŽŠPDVĆTEZŠ KECGW XPBĐUJSIŽ JHNGGE XŠOZYM UUĆVLHFKGZ","highScore":{"length":0,"correct":0,"wrong":-1,"wpm":0},"lastScore":{"length":0,"correct":0,"wrong":-1,"wpm":0}}</value>
+            </setting>
         </Dactylography.Properties.Settings>
     </userSettings>
 </configuration>
