Added a bit smarter statistics, and global wpm

--- a/Dactylography/Dactylography/App.config
+++ b/Dactylography/Dactylography/App.config
@@ -28,6 +28,9 @@
             <setting name="Hard" serializeAs="String">
                 <value>{"text":"EJWGXWC ĆMSŠGAJE ETMPOQ VĐĐPOPTGTF WTFHČŠALACVJNG BUFLCXSHL KĐBIĆNRŽ ĐNAGSS KQKMXSXNĐ ŽSTFJJOTDMQOTVL YQĐBČS ĐWPBLŽQ NCXĐKTDCUJUŽ ZUCYUKČČĐG NIĆBRLL BOWŽŠPDVĆTEZŠ KECGW XPBĐUJSIŽ JHNGGE XŠOZYM UUĆVLHFKGZ","highScore":{"length":0,"correct":0,"wrong":-1,"wpm":0},"lastScore":{"length":0,"correct":0,"wrong":-1,"wpm":0}}</value>
             </setting>
+            <setting name="bestWpm" serializeAs="String">
+                <value>0</value>
+            </setting>
         </Dactylography.Properties.Settings>
     </userSettings>
 </configuration>
